# samp-plugin-sdk

./: CMakeLists.txt
cmake/: Config.cmake.in
